creation de la page contact

--- a/css/style.css
+++ b/css/style.css
@@ -44,4 +44,102 @@
     padding: 20px;
 }
 
+
 /* Ajoutez d'autres styles ici selon vos besoins */
+
+.bodyAbout {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.about-container {
+    width: 80%;
+    max-width: 800px;
+}
+
+.heading {
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+}
+
+.subheading {
+    font-size: 1.2em;
+    line-height: 1.6;
+    margin-bottom: 2em;
+}
+
+.h2About {
+    color: #333333;
+    margin-bottom: 1em;
+}
+
+.pAbout {
+    font-size: 1em;
+    line-height: 1.6;
+    color: #555555;
+    margin-bottom: 1em;
+}
+
+
+.contact-container {
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 1rem;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact-title {
+    color: #333;
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+.contact-subtitle {
+    font-size: 1.5rem;
+    color: #333;
+    margin-bottom: 0.5rem;
+}
+
+.contact-text {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 2rem;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.form-label {
+    display: block;
+    margin-bottom: 0.5rem;
+    color: #333;
+}
+
+.form-input,
+.form-textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+}
+
+.form-textarea {
+    height: 150px;
+    resize: vertical;
+}
