--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,19 @@
     height: 150px;
     resize: vertical;
 }
+
+.logout-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+
+.logout-link {
+    color: blue;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.logout-link:hover {
+    text-decoration: underline;
+}
